ajout page icones photo

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 <body>
   <header>
     <h1>Véronique BOULNOIS - DEVELOPPEUSE WEB JUNIOR</h1><br>
-    <div class="photo"><img src="img/photomoi.jpg" alt="photoperso">
+    <div class="photo"><a href="page2.html"><img src="img/photomoi.jpg" alt="photoperso" title="Pour plus d'info sur mon parcours, cliquez ici !."></a>
     </div>
     <div id="coordonnees">
       <div class="adresse"><strong>Adresse : </strong><p>60350 TROSLY BREUIL</p><p>(1h de Paris)</p></div>
       <div class="telephone"><strong>Téléphone : </strong><p>07.83.27.97.13</p>
-        <a href="https://www.linkedin.com/in/v%C3%A9ronique-boulnois-59026185/"<i class="fa fa-linkedin fa-2x" aria-hidden="true"></i></a>
-        <a href="https://github.com/veroboulnois"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
+        <a  href="https://www.linkedin.com/in/v%C3%A9ronique-boulnois-59026185/" title="mon linkedin"><i class="fa fa-linkedin fa-2x logoreseau" aria-hidden="true"></i></a>
+        <a  href="https://github.com/veroboulnois" title="mon github"><i class="fa fa-github fa-2x logoreseau" aria-hidden="true"></i></a>
       </div>
       <div class="email"><strong>E-mail : </strong><p><a href="mailto:vero.boulnois@gmail.com">Envoyez-moi un e-mail !</a></p></div>
     </div>
@@ -30,12 +30,54 @@
     <section><h2>Compétences informatiques</h2>
       <ul>
         <li>Windows - Linux - Apache - Terminal - Nano - Vhost</li>
-        <li>Git - Github - Gimp</li>
-        <li>HTML - CSS - PHP </li>
+        <i class="fa fa-plus-circle" aria-hidden="true"></i>
+        <i class="fa fa-plus-circle" aria-hidden="true"></i>
+        <i class="fa fa-circle" aria-hidden="true"></i>
+        <i class="fa fa-circle" aria-hidden="true"></i>
+        <i class="fa fa-circle" aria-hidden="true"></i>
+        <li>Git - Github</li> <i class="fa fa-plus-circle" aria-hidden="true"></i>
+          <i class="fa fa-plus-circle" aria-hidden="true"></i>
+          <i class="fa fa-circle" aria-hidden="true"></i>
+          <i class="fa fa-circle" aria-hidden="true"></i>
+          <i class="fa fa-circle" aria-hidden="true"></i>
+        </li>
+        <li>HTML - CSS</li><i class="fa fa-plus-circle" aria-hidden="true"></i>
+        <i class="fa fa-plus-circle" aria-hidden="true"></i>
+        <i class="fa fa-circle" aria-hidden="true"></i>
+        <i class="fa fa-circle" aria-hidden="true"></i>
+        <i class="fa fa-circle" aria-hidden="true"></i>
+        <li>PHP</li><i class="fa fa-plus-circle" aria-hidden="true"></i>
+        <i class="fa fa-circle" aria-hidden="true"></i>
+        <i class="fa fa-circle" aria-hidden="true"></i>
+        <i class="fa fa-circle" aria-hidden="true"></i>
+        <i class="fa fa-circle" aria-hidden="true"></i>
+        <li>Atom</li><i class="fa fa-plus-circle" aria-hidden="true"></i>
+        <i class="fa fa-plus-circle" aria-hidden="true"></i>
+        <i class="fa fa-plus-circle" aria-hidden="true"></i>
+        <i class="fa fa-circle" aria-hidden="true"></i>
+        <i class="fa fa-circle" aria-hidden="true"></i>
+        <li>Gimp</li><i class="fa fa-plus-circle" aria-hidden="true"></i>
+        <i class="fa fa-circle" aria-hidden="true"></i>
+        <i class="fa fa-circle" aria-hidden="true"></i>
+        <i class="fa fa-circle" aria-hidden="true"></i>
+        <i class="fa fa-circle" aria-hidden="true"></i>
+        <li>Outlook - lotus</li><i class="fa fa-plus-circle" aria-hidden="true"></i>
+        <i class="fa fa-plus-circle" aria-hidden="true"></i>
+        <i class="fa fa-plus-circle" aria-hidden="true"></i>
+        <i class="fa fa-circle" aria-hidden="true"></i>
+        <i class="fa fa-circle" aria-hidden="true"></i>
         <li>Microsoft Office - Ciel - Sage - Cegid</li>
-        <li>Atom</li>
-        <li>Outlook - lotus</li>
+        <i class="fa fa-plus-circle" aria-hidden="true"></i>
+        <i class="fa fa-plus-circle" aria-hidden="true"></i>
+        <i class="fa fa-plus-circle" aria-hidden="true"></i>
+        <i class="fa fa-plus-circle" aria-hidden="true"></i>
+        <i class="fa fa-circle" aria-hidden="true"></i>
         <li>Logiciels de réglage d'appareils auditifs (Connexx, Phonak Target, Inspire...)</li>
+        <i class="fa fa-plus-circle" aria-hidden="true"></i>
+        <i class="fa fa-plus-circle" aria-hidden="true"></i>
+        <i class="fa fa-plus-circle" aria-hidden="true"></i>
+        <i class="fa fa-circle" aria-hidden="true"></i>
+        <i class="fa fa-circle" aria-hidden="true"></i>
       </ul>
     </section>
     <section><h2>Compétences transversales</h2>
