--- a/index.html
+++ b/index.html
@@ -2,141 +2,162 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="style.css">
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+  <link href="style.css" rel="stylesheet">
   <script src="https://use.fontawesome.com/a85a823305.js"></script>
-  <title>CV DEVELOPPEUSE WEB</title>
+    <title>CV</title>
 </head>
 <body>
-  <header>
-    <h1>Véronique BOULNOIS - DEVELOPPEUSE WEB JUNIOR</h1><br>
-    <div class="photo"><a href="page2.html"><img src="img/photomoi.jpg" alt="photoperso" title="Pour plus d'info sur mon parcours, cliquez ici !."></a>
-    </div>
-    <div id="coordonnees">
-      <div class="adresse"><strong>Adresse : </strong><p>60350 TROSLY BREUIL</p><p>(1h de Paris)</p></div>
-      <div class="telephone"><strong>Téléphone : </strong><p>07.83.27.97.13</p>
-        <a  href="https://www.linkedin.com/in/v%C3%A9ronique-boulnois-59026185/" title="mon linkedin"><i class="fa fa-linkedin fa-2x logoreseau" aria-hidden="true"></i></a>
-        <a  href="https://github.com/veroboulnois" title="mon github"><i class="fa fa-github fa-2x logoreseau" aria-hidden="true"></i></a>
-      </div>
-      <div class="email"><strong>E-mail : </strong><p><a href="mailto:vero.boulnois@gmail.com">Envoyez-moi un e-mail !</a></p></div>
-    </div>
-  </header>
-  <nav id="menu">
-    <div class="competences"><a href="#contenuCompetences"<strong>Compétences et Savoir-Etre</strong></a></div>
-    <div class="formation"><a href="#contenuFormation"<strong>Formation</strong></a></div>
-    <div class="experience"><a href="#contenuExperience"<strong>Expériences Professionnelles</strong></a></div>
-    <div class="interets"><a href="#centresInterets"<strong>Centre d'intérêts</strong></a></div>
-  </nav>
-  <div id="contenuCompetences">
-    <section><h2>Compétences informatiques</h2>
-      <ul>
-        <li>Windows - Linux - Apache - Terminal - Nano - Vhost</li>
-        <i class="fa fa-plus-circle" aria-hidden="true"></i>
-        <i class="fa fa-plus-circle" aria-hidden="true"></i>
-        <i class="fa fa-circle" aria-hidden="true"></i>
-        <i class="fa fa-circle" aria-hidden="true"></i>
-        <i class="fa fa-circle" aria-hidden="true"></i>
-        <li>Git - Github</li> <i class="fa fa-plus-circle" aria-hidden="true"></i>
-          <i class="fa fa-plus-circle" aria-hidden="true"></i>
-          <i class="fa fa-circle" aria-hidden="true"></i>
-          <i class="fa fa-circle" aria-hidden="true"></i>
-          <i class="fa fa-circle" aria-hidden="true"></i>
-        </li>
-        <li>HTML - CSS</li><i class="fa fa-plus-circle" aria-hidden="true"></i>
-        <i class="fa fa-plus-circle" aria-hidden="true"></i>
-        <i class="fa fa-circle" aria-hidden="true"></i>
-        <i class="fa fa-circle" aria-hidden="true"></i>
-        <i class="fa fa-circle" aria-hidden="true"></i>
-        <li>PHP</li><i class="fa fa-plus-circle" aria-hidden="true"></i>
-        <i class="fa fa-circle" aria-hidden="true"></i>
-        <i class="fa fa-circle" aria-hidden="true"></i>
-        <i class="fa fa-circle" aria-hidden="true"></i>
-        <i class="fa fa-circle" aria-hidden="true"></i>
-        <li>Atom</li><i class="fa fa-plus-circle" aria-hidden="true"></i>
-        <i class="fa fa-plus-circle" aria-hidden="true"></i>
-        <i class="fa fa-plus-circle" aria-hidden="true"></i>
-        <i class="fa fa-circle" aria-hidden="true"></i>
-        <i class="fa fa-circle" aria-hidden="true"></i>
-        <li>Gimp</li><i class="fa fa-plus-circle" aria-hidden="true"></i>
-        <i class="fa fa-circle" aria-hidden="true"></i>
-        <i class="fa fa-circle" aria-hidden="true"></i>
-        <i class="fa fa-circle" aria-hidden="true"></i>
-        <i class="fa fa-circle" aria-hidden="true"></i>
-        <li>Outlook - lotus</li><i class="fa fa-plus-circle" aria-hidden="true"></i>
-        <i class="fa fa-plus-circle" aria-hidden="true"></i>
-        <i class="fa fa-plus-circle" aria-hidden="true"></i>
-        <i class="fa fa-circle" aria-hidden="true"></i>
-        <i class="fa fa-circle" aria-hidden="true"></i>
-        <li>Microsoft Office - Ciel - Sage - Cegid</li>
-        <i class="fa fa-plus-circle" aria-hidden="true"></i>
-        <i class="fa fa-plus-circle" aria-hidden="true"></i>
-        <i class="fa fa-plus-circle" aria-hidden="true"></i>
-        <i class="fa fa-plus-circle" aria-hidden="true"></i>
-        <i class="fa fa-circle" aria-hidden="true"></i>
-        <li>Logiciels de réglage d'appareils auditifs (Connexx, Phonak Target, Inspire...)</li>
-        <i class="fa fa-plus-circle" aria-hidden="true"></i>
-        <i class="fa fa-plus-circle" aria-hidden="true"></i>
-        <i class="fa fa-plus-circle" aria-hidden="true"></i>
-        <i class="fa fa-circle" aria-hidden="true"></i>
-        <i class="fa fa-circle" aria-hidden="true"></i>
-      </ul>
-    </section>
-    <section><h2>Compétences transversales</h2>
-      <p>
-        <ul>
-          <li>Sens de l'organisation</li>
-          <li>Proposition commerciale/Devis</li>
-          <li>Sens du service client</li>
-          <li>Grande adaptabilité</li>
-          <li>Anglais intermédiaire</li>
-        </ul></p></section>
-      </div>
-      <div class="contenuSavoirEtre">
-        <section><h2>Savoir-Etre</h2>
-          <p>
-            <ul>
-              <li>Autonome</li>
-              <li>Esprit d'équipe</li>
-              <li>Dynamique</li>
-              <li>Rigueur et conscience professionnelle</li>
-              <li>Veille informatique</li>
-            </ul></p>
-          </section>
+  <div class="container">
+    <header class="row">
+      <div class="col-lg-12">
+        <div class="col-lg-12"><h1>Véronique BOULNOIS - DEVELOPPEUSE WEB JUNIOR</h1></div>
+        <div class="row">
+          <div class="col-lg-offset-4 col-lg-4">
+            <a href="page2.html"><img src="img/photomoi.jpg" alt="photoperso" title="Pour plus d'info sur mon parcours, cliquez ici !."></a>
+          </div>
         </div>
-        <div id="contenuFormation">
-          <section><h2>Formation</h2><p>
-            <ul>
-              <li><strong>2017</strong> Formation aux métiers du numérique et du développement Web, à l'école <a href="http://formation.novei.fr/">E2N</a>, (labellisée Grande Ecole du Numérique par l'Etat) en cours</li>
-              <li><strong>2016</strong> Titre de Vendeur Conseil par l'AFPA (Niveau IV)</li>
-              <li><strong>1993</strong> Baccalauréat Gestion Bureautique (Niveau IV)</li>
-            </ul></p>
-          </section>
+        <div class="row">
+          <div class="col-lg-4"><strong>Adresse : </strong><p>60350 TROSLY BREUIL</p><p>(1h de Paris)</p></div>
+          <div class="col-lg-4"><strong>Téléphone : </strong><p>07.83.27.97.13</p>
+            <a  href="https://www.linkedin.com/in/v%C3%A9ronique-boulnois-59026185/" title="mon linkedin"><i class="fa fa-linkedin fa-2x logoreseau" aria-hidden="true"></i></a>
+            <a  href="https://github.com/veroboulnois" title="mon github"><i class="fa fa-github fa-2x logoreseau" aria-hidden="true"></i></a>
+          </div>
+          <div class="col-lg-4"><strong>E-mail : </strong><p><a href="mailto:vero.boulnois@gmail.com">Envoyez-moi un e-mail !</a></p></div>
         </div>
-        <div id="contenuExperience">
-          <section><h2>Expérience Professionnelle</h2>
-            <p><ul>
-              <li><strong>2015-2016</strong> Assistante Commerciale/ Agent Commercial à Agence VERNON IMMOBILIER (27)</li>
-              <li><strong>2014</strong> Assistante Gestion à CLOTURES IDF (27)</li>
-              <li><strong>2014</strong> Assitante administrative et comptable à CE Lamotte CLARIANT (60)</li>
-              <li><strong>2008 -2010</strong> Assistante technico-commerciale à AUDITION BENOIT (60)</li>
-              <li><strong>2007</strong> Hôtesse commerciale à HYGENA CUISINES (78)</li>
-              <li><strong>2006</strong> Standardiste - Assistante administrative à SUPEX (27)</li>
-              <li><strong>1996-2005</strong> Secrétaire polyvalente à CYCLO-NEWS (27)</li>
-              <li><strong>1994-1996</strong> Assistante administration des ventes à AGFA-GEVAERT (92)</li>
-              <li><strong>1993</strong> Secrétaire commerciale à AGENCE DE L'EMPEREUR (92)</li>
-            </ul>
-          </p>
-        </section>
       </div>
-      <div id="centresInterets">
-        <section><h2>Centres d'Intérêts</h2><p>
+    </header>
+      <div class="row">
+        <nav class="col-lg-12">
+          <div class="col-lg-3"><a href="#contenuCompetences"><strong><h4>Compétences et Savoir-Etre</h4></strong></a></div>
+          <div class="col-lg-3"><a href="#contenuFormation"><strong><h4>Formation</h4></strong></a></div>
+          <div class="col-lg-3"><a href="#contenuExperience"><strong><h4>Expériences Professionnelles</h4></strong></a></div>
+          <div class="col-lg-3"><a href="#centresInterets"><strong><h4>Centre d'intérêts</h4></strong></a></div>
+        </nav>
+      </div>
+        <div class="row">
+        <section id="contenuCompetences">
+          <div class="col-lg-6"><h2>Compétences informatiques</h2>
+            <ul>
+              <li>Windows - Linux - Apache - Terminal - Nano - Vhost
+              <i class="fa fa-plus-circle" aria-hidden="true"></i>
+              <i class="fa fa-plus-circle" aria-hidden="true"></i>
+              <i class="fa fa-circle" aria-hidden="true"></i>
+              <i class="fa fa-circle" aria-hidden="true"></i>
+              <i class="fa fa-circle" aria-hidden="true"></i></li>
+              <li>Git - Github <i class="fa fa-plus-circle" aria-hidden="true"></i>
+              <i class="fa fa-plus-circle" aria-hidden="true"></i>
+              <i class="fa fa-circle" aria-hidden="true"></i>
+              <i class="fa fa-circle" aria-hidden="true"></i>
+              <i class="fa fa-circle" aria-hidden="true"></i></li>
+            </li>
+            <li>HTML - CSS <i class="fa fa-plus-circle" aria-hidden="true"></i>
+            <i class="fa fa-plus-circle" aria-hidden="true"></i>
+            <i class="fa fa-circle" aria-hidden="true"></i>
+            <i class="fa fa-circle" aria-hidden="true"></i>
+            <i class="fa fa-circle" aria-hidden="true"></i></li>
+            <li>PHP <i class="fa fa-plus-circle" aria-hidden="true"></i>
+            <i class="fa fa-circle" aria-hidden="true"></i>
+            <i class="fa fa-circle" aria-hidden="true"></i>
+            <i class="fa fa-circle" aria-hidden="true"></i>
+            <i class="fa fa-circle" aria-hidden="true"></i></li>
+            <li>Atom <i class="fa fa-plus-circle" aria-hidden="true"></i>
+            <i class="fa fa-plus-circle" aria-hidden="true"></i>
+            <i class="fa fa-plus-circle" aria-hidden="true"></i>
+            <i class="fa fa-circle" aria-hidden="true"></i>
+            <i class="fa fa-circle" aria-hidden="true"></i></li>
+            <li>Gimp <i class="fa fa-plus-circle" aria-hidden="true"></i>
+            <i class="fa fa-circle" aria-hidden="true"></i>
+            <i class="fa fa-circle" aria-hidden="true"></i>
+            <i class="fa fa-circle" aria-hidden="true"></i>
+            <i class="fa fa-circle" aria-hidden="true"></i></li>
+            <li>Outlook - lotus <i class="fa fa-plus-circle" aria-hidden="true"></i>
+            <i class="fa fa-plus-circle" aria-hidden="true"></i>
+            <i class="fa fa-plus-circle" aria-hidden="true"></i>
+            <i class="fa fa-circle" aria-hidden="true"></i>
+            <i class="fa fa-circle" aria-hidden="true"></i></li>
+            <li>Microsoft Office - Ciel - Sage - Cegid
+            <i class="fa fa-plus-circle" aria-hidden="true"></i>
+            <i class="fa fa-plus-circle" aria-hidden="true"></i>
+            <i class="fa fa-plus-circle" aria-hidden="true"></i>
+            <i class="fa fa-plus-circle" aria-hidden="true"></i>
+            <i class="fa fa-circle" aria-hidden="true"></i></li>
+            <li>Logiciels pour appareils auditifs (Connexx, Phonak Target, Inspire...)
+            <i class="fa fa-plus-circle" aria-hidden="true"></i>
+            <i class="fa fa-plus-circle" aria-hidden="true"></i>
+            <i class="fa fa-plus-circle" aria-hidden="true"></i>
+            <i class="fa fa-circle" aria-hidden="true"></i>
+            <i class="fa fa-circle" aria-hidden="true"></i></li>
+          </ul>
+        </div>
+          <div class="col-lg-6"><h2>Compétences transversales</h2>
+          <ul>
+            <li>Sens de l'organisation</li>
+            <li>Sens des priorités</li>
+            <li>Proposition commerciale/Devis</li>
+            <li>Sens du service client</li>
+            <li>Grande adaptabilité</li>
+            <li>Anglais intermédiaire</li>
+            <br>
+            <br>
+            <br>
+          </ul>
+        </div>
+      </section>
+    </div>
+    <div class="row">
+      <section id="contenuSavoirEtre">
+        <div class="col-lg-12"><h2>Savoir-Etre</h2>
+          <ul>
+            <li>Autonome</li>
+            <li>Esprit d'équipe</li>
+            <li>Dynamique</li>
+            <li>Rigueur et conscience professionnelle</li>
+            <li>Veille informatique</li>
+          </ul>
+        </div>
+      </section>
+    </div>
+    <div class="row">
+      <section id="contenuFormation">
+        <div class="col-lg-12"><h2>Formation</h2>
+          <ul>
+            <li><strong>2017</strong> Formation aux métiers du numérique et du développement Web, à l'école <a href="http://formation.novei.fr/">E2N</a>, (labellisée Grande Ecole du Numérique par l'Etat) en cours</li>
+            <li><strong>2016</strong> Titre de Vendeur Conseil par l'AFPA (Niveau IV)</li>
+            <li><strong>1993</strong> Baccalauréat Gestion Bureautique (Niveau IV)</li>
+          </ul>
+        </div>
+      </section>
+    </div>
+    <div class="row">
+      <section id="contenuExperience">
+        <div class="col-lg-12"><h2>Expérience Professionnelle</h2>
+          <ul>
+            <li><strong>2015-2016</strong> Assistante Commerciale/ Agent Commercial à Agence VERNON IMMOBILIER (27)</li>
+            <li><strong>2014</strong> Assistante Gestion à CLOTURES IDF (27)</li>
+            <li><strong>2014</strong> Assitante administrative et comptable à CE Lamotte CLARIANT (60)</li>
+            <li><strong>2008 -2010</strong> Assistante technico-commerciale à AUDITION BENOIT (60)</li>
+            <li><strong>2007</strong> Hôtesse commerciale à HYGENA CUISINES (78)</li>
+            <li><strong>2006</strong> Standardiste - Assistante administrative à SUPEX (27)</li>
+            <li><strong>1996-2005</strong> Secrétaire polyvalente à CYCLO-NEWS (27)</li>
+            <li><strong>1994-1996</strong> Assistante administration des ventes à AGFA-GEVAERT (92)</li>
+            <li><strong>1993</strong> Secrétaire commerciale à AGENCE DE L'EMPEREUR (92)</li>
+          </ul>
+        </div>
+      </section>
+    </div>
+    <div class="row">
+      <section id="centresInterets">
+        <div class="col-lg-12"><h2>Centres d'Intérêts</h2>
           <ul>
             <li>Peintures à l'huile <i class="fa fa-paint-brush" aria-hidden="true"></i>
             </li>
-            <li>Bricolage</li>
             <li>Informatique <i class="fa fa-laptop" aria-hidden="true"></i>
             </li>
-          </ul></p>
+          </ul>
         </section>
       </div>
-    </body>
-    </html>
+    </div>
+  </div>
+</body>
+</html>
