boostrap tout format

--- a/index.html
+++ b/index.html
@@ -10,34 +10,38 @@
 <body>
   <div class="container">
     <header class="row">
-      <div class="col-lg-12">
-        <div class="col-lg-12"><h1>Véronique BOULNOIS - DEVELOPPEUSE WEB JUNIOR</h1></div>
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 "><h1>Véronique BOULNOIS</h1></div>
+      <div class="row">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><h3>DEVELOPPEUSE WEB JUNIOR</h3></div>
+      </div>
         <div class="row">
-          <div class="col-lg-offset-4 col-lg-4">
+          <div class="col-md-offset-4 col-sm-offset-4 col-xs-offset-3 col-md-4 col-sm-4 col-xs-4 col-lg-4">
             <a href="page2.html"><img src="img/photomoi.jpg" alt="photoperso" title="Pour plus d'info sur mon parcours, cliquez ici !."></a>
           </div>
         </div>
         <div class="row">
-          <div class="col-lg-4"><strong>Adresse : </strong><p>60350 TROSLY BREUIL</p><p>(1h de Paris)</p></div>
-          <div class="col-lg-4"><strong>Téléphone : </strong><p>07.83.27.97.13</p>
+          <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12"><strong>Adresse : </strong><p>60350 TROSLY BREUIL</p><p>(1h de Paris)</p></div>
+          <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12"><strong>Téléphone : </strong><p>07.83.27.97.13</p>
             <a  href="https://www.linkedin.com/in/v%C3%A9ronique-boulnois-59026185/" title="mon linkedin"><i class="fa fa-linkedin fa-2x logoreseau" aria-hidden="true"></i></a>
             <a  href="https://github.com/veroboulnois" title="mon github"><i class="fa fa-github fa-2x logoreseau" aria-hidden="true"></i></a>
           </div>
-          <div class="col-lg-4"><strong>E-mail : </strong><p><a href="mailto:vero.boulnois@gmail.com">Envoyez-moi un e-mail !</a></p></div>
+          <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12"><strong>E-mail : </strong><p><a href="mailto:vero.boulnois@gmail.com">Envoyez-moi un e-mail !</a></p></div>
         </div>
       </div>
     </header>
       <div class="row">
-        <nav class="col-lg-12">
-          <div class="col-lg-3"><a href="#contenuCompetences"><strong><h4>Compétences et Savoir-Etre</h4></strong></a></div>
-          <div class="col-lg-3"><a href="#contenuFormation"><strong><h4>Formation</h4></strong></a></div>
-          <div class="col-lg-3"><a href="#contenuExperience"><strong><h4>Expériences Professionnelles</h4></strong></a></div>
-          <div class="col-lg-3"><a href="#centresInterets"><strong><h4>Centre d'intérêts</h4></strong></a></div>
+        <nav class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hidden-xs">
+          <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12"><a href="#contenuCompetences"><strong><h4>Compétences et Savoir-Etre</h4></strong></a></div>
+          <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12"><a href="#contenuFormation"><strong><h4>Formation</h4></strong></a></div>
+          <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12"><a href="#contenuExperience"><strong><h4>Expériences Professionnelles</h4></strong></a></div>
+          <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12"><a href="#centresInterets"><strong><h4>Centre d'intérêts</h4></strong></a></div>
         </nav>
       </div>
-        <div class="row">
+        <div class="row couleur">
         <section id="contenuCompetences">
-          <div class="col-lg-6"><h2>Compétences informatiques</h2>
+          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12"><h2>Compétences informatiques</h2>
             <ul>
               <li>Windows - Linux - Apache - Terminal - Nano - Vhost
               <i class="fa fa-plus-circle" aria-hidden="true"></i>
@@ -90,7 +94,7 @@
             <i class="fa fa-circle" aria-hidden="true"></i></li>
           </ul>
         </div>
-          <div class="col-lg-6"><h2>Compétences transversales</h2>
+          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12"><h2>Compétences transversales</h2>
           <ul>
             <li>Sens de l'organisation</li>
             <li>Sens des priorités</li>
@@ -98,16 +102,13 @@
             <li>Sens du service client</li>
             <li>Grande adaptabilité</li>
             <li>Anglais intermédiaire</li>
-            <br>
-            <br>
-            <br>
           </ul>
         </div>
       </section>
     </div>
     <div class="row">
       <section id="contenuSavoirEtre">
-        <div class="col-lg-12"><h2>Savoir-Etre</h2>
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><h2>Savoir-Etre</h2>
           <ul>
             <li>Autonome</li>
             <li>Esprit d'équipe</li>
@@ -120,7 +121,7 @@
     </div>
     <div class="row">
       <section id="contenuFormation">
-        <div class="col-lg-12"><h2>Formation</h2>
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><h2>Formation</h2>
           <ul>
             <li><strong>2017</strong> Formation aux métiers du numérique et du développement Web, à l'école <a href="http://formation.novei.fr/">E2N</a>, (labellisée Grande Ecole du Numérique par l'Etat) en cours</li>
             <li><strong>2016</strong> Titre de Vendeur Conseil par l'AFPA (Niveau IV)</li>
@@ -131,7 +132,7 @@
     </div>
     <div class="row">
       <section id="contenuExperience">
-        <div class="col-lg-12"><h2>Expérience Professionnelle</h2>
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><h2>Expérience Professionnelle</h2>
           <ul>
             <li><strong>2015-2016</strong> Assistante Commerciale/ Agent Commercial à Agence VERNON IMMOBILIER (27)</li>
             <li><strong>2014</strong> Assistante Gestion à CLOTURES IDF (27)</li>
@@ -148,12 +149,13 @@
     </div>
     <div class="row">
       <section id="centresInterets">
-        <div class="col-lg-12"><h2>Centres d'Intérêts</h2>
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><h2>Centres d'Intérêts</h2>
           <ul>
-            <li>Peintures à l'huile <i class="fa fa-paint-brush" aria-hidden="true"></i>
+            <li>Peintures à l'huile <i class="fa fa-paint-brush fa-2x picto" aria-hidden="true"></i>
             </li>
-            <li>Informatique <i class="fa fa-laptop" aria-hidden="true"></i>
+            <li>Informatique <i class="fa fa-laptop fa-2x picto" aria-hidden="true"></i>
             </li>
+            <li>Bricolage <img src="img/bricol.png" alt=""></li>
           </ul>
         </section>
       </div>
