cv bootstrap final

--- a/index.html
+++ b/index.html
@@ -5,32 +5,37 @@
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
   <link href="style.css" rel="stylesheet">
   <script src="https://use.fontawesome.com/a85a823305.js"></script>
-    <title>CV</title>
+  <title>CV</title>
 </head>
 <body>
   <div class="container">
     <header class="row">
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 "><h1>Véronique BOULNOIS</h1></div>
-      <div class="row">
-        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><h3>DEVELOPPEUSE WEB JUNIOR</h3></div>
-      </div>
         <div class="row">
-          <div class="col-md-offset-4 col-sm-offset-4 col-xs-offset-3 col-md-4 col-sm-4 col-xs-4 col-lg-4">
-            <a href="page2.html"><img src="img/photomoi.jpg" alt="photoperso" title="Pour plus d'info sur mon parcours, cliquez ici !."></a>
+          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><h3>DEVELOPPEUSE WEB JUNIOR</h3></div>
+          </div>
+          <div class="row">
+            <div class="col-md-offset-4 col-sm-offset-4 col-xs-offset-3 col-md-4 col-sm-4 col-xs-4 col-lg-4">
+              <a href="page2.html"><img src="img/photomoi.jpg" alt="photoperso" title="Pour plus d'info sur mon parcours, cliquez ici !."></a>
+            </div>
+            </div>
+            <div class="row">
+              <div class="visible-xs-block col-xs-12">
+                <a href="page2.html" class="logoreseau">Mon parcours</a>
+              </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12"><strong>Adresse : </strong><p>60350 TROSLY BREUIL</p><p>(1h de Paris)</p></div>
+            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12"><strong>Téléphone : </strong><p>07.83.27.97.13</p>
+              <a  href="https://www.linkedin.com/in/v%C3%A9ronique-boulnois-59026185/" title="mon linkedin"><i class="fa fa-linkedin fa-2x logoreseau" aria-hidden="true"></i></a>
+              <a  href="https://github.com/veroboulnois" title="mon github"><i class="fa fa-github fa-2x logoreseau" aria-hidden="true"></i></a>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12"><strong>E-mail : </strong><p><a href="mailto:vero.boulnois@gmail.com" title="mon email"><i class="fa fa-envelope fa-2x logoreseau" aria-hidden="true"></i></a></p></div>
           </div>
         </div>
-        <div class="row">
-          <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12"><strong>Adresse : </strong><p>60350 TROSLY BREUIL</p><p>(1h de Paris)</p></div>
-          <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12"><strong>Téléphone : </strong><p>07.83.27.97.13</p>
-            <a  href="https://www.linkedin.com/in/v%C3%A9ronique-boulnois-59026185/" title="mon linkedin"><i class="fa fa-linkedin fa-2x logoreseau" aria-hidden="true"></i></a>
-            <a  href="https://github.com/veroboulnois" title="mon github"><i class="fa fa-github fa-2x logoreseau" aria-hidden="true"></i></a>
-          </div>
-          <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12"><strong>E-mail : </strong><p><a href="mailto:vero.boulnois@gmail.com">Envoyez-moi un e-mail !</a></p></div>
-        </div>
-      </div>
-    </header>
+      </header>
       <div class="row">
         <nav class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hidden-xs">
           <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12"><a href="#contenuCompetences"><strong><h4>Compétences et Savoir-Etre</h4></strong></a></div>
@@ -39,127 +44,127 @@
           <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12"><a href="#centresInterets"><strong><h4>Centre d'intérêts</h4></strong></a></div>
         </nav>
       </div>
-        <div class="row couleur">
+      <div class="row couleur">
         <section id="contenuCompetences">
           <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12"><h2>Compétences informatiques</h2>
-            <ul>
+            <ul class="list-unstyled">
               <li>Windows - Linux - Apache - Terminal - Nano - Vhost
-              <i class="fa fa-plus-circle" aria-hidden="true"></i>
-              <i class="fa fa-plus-circle" aria-hidden="true"></i>
-              <i class="fa fa-circle" aria-hidden="true"></i>
-              <i class="fa fa-circle" aria-hidden="true"></i>
-              <i class="fa fa-circle" aria-hidden="true"></i></li>
-              <li>Git - Github <i class="fa fa-plus-circle" aria-hidden="true"></i>
-              <i class="fa fa-plus-circle" aria-hidden="true"></i>
-              <i class="fa fa-circle" aria-hidden="true"></i>
-              <i class="fa fa-circle" aria-hidden="true"></i>
-              <i class="fa fa-circle" aria-hidden="true"></i></li>
-            </li>
-            <li>HTML - CSS <i class="fa fa-plus-circle" aria-hidden="true"></i>
-            <i class="fa fa-plus-circle" aria-hidden="true"></i>
-            <i class="fa fa-circle" aria-hidden="true"></i>
-            <i class="fa fa-circle" aria-hidden="true"></i>
-            <i class="fa fa-circle" aria-hidden="true"></i></li>
-            <li>PHP <i class="fa fa-plus-circle" aria-hidden="true"></i>
-            <i class="fa fa-circle" aria-hidden="true"></i>
-            <i class="fa fa-circle" aria-hidden="true"></i>
-            <i class="fa fa-circle" aria-hidden="true"></i>
-            <i class="fa fa-circle" aria-hidden="true"></i></li>
-            <li>Atom <i class="fa fa-plus-circle" aria-hidden="true"></i>
-            <i class="fa fa-plus-circle" aria-hidden="true"></i>
-            <i class="fa fa-plus-circle" aria-hidden="true"></i>
-            <i class="fa fa-circle" aria-hidden="true"></i>
-            <i class="fa fa-circle" aria-hidden="true"></i></li>
-            <li>Gimp <i class="fa fa-plus-circle" aria-hidden="true"></i>
-            <i class="fa fa-circle" aria-hidden="true"></i>
-            <i class="fa fa-circle" aria-hidden="true"></i>
-            <i class="fa fa-circle" aria-hidden="true"></i>
-            <i class="fa fa-circle" aria-hidden="true"></i></li>
-            <li>Outlook - lotus <i class="fa fa-plus-circle" aria-hidden="true"></i>
-            <i class="fa fa-plus-circle" aria-hidden="true"></i>
-            <i class="fa fa-plus-circle" aria-hidden="true"></i>
-            <i class="fa fa-circle" aria-hidden="true"></i>
-            <i class="fa fa-circle" aria-hidden="true"></i></li>
-            <li>Microsoft Office - Ciel - Sage - Cegid
-            <i class="fa fa-plus-circle" aria-hidden="true"></i>
-            <i class="fa fa-plus-circle" aria-hidden="true"></i>
-            <i class="fa fa-plus-circle" aria-hidden="true"></i>
-            <i class="fa fa-plus-circle" aria-hidden="true"></i>
-            <i class="fa fa-circle" aria-hidden="true"></i></li>
-            <li>Logiciels pour appareils auditifs (Connexx, Phonak Target, Inspire...)
-            <i class="fa fa-plus-circle" aria-hidden="true"></i>
-            <i class="fa fa-plus-circle" aria-hidden="true"></i>
-            <i class="fa fa-plus-circle" aria-hidden="true"></i>
-            <i class="fa fa-circle" aria-hidden="true"></i>
-            <i class="fa fa-circle" aria-hidden="true"></i></li>
-          </ul>
-        </div>
-          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12"><h2>Compétences transversales</h2>
-          <ul>
-            <li>Sens de l'organisation</li>
-            <li>Sens des priorités</li>
-            <li>Proposition commerciale/Devis</li>
-            <li>Sens du service client</li>
-            <li>Grande adaptabilité</li>
-            <li>Anglais intermédiaire</li>
-          </ul>
-        </div>
-      </section>
-    </div>
-    <div class="row">
-      <section id="contenuSavoirEtre">
-        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><h2>Savoir-Etre</h2>
-          <ul>
-            <li>Autonome</li>
-            <li>Esprit d'équipe</li>
-            <li>Dynamique</li>
-            <li>Rigueur et conscience professionnelle</li>
-            <li>Veille informatique</li>
-          </ul>
-        </div>
-      </section>
-    </div>
-    <div class="row">
-      <section id="contenuFormation">
-        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><h2>Formation</h2>
-          <ul>
-            <li><strong>2017</strong> Formation aux métiers du numérique et du développement Web, à l'école <a href="http://formation.novei.fr/">E2N</a>, (labellisée Grande Ecole du Numérique par l'Etat) en cours</li>
-            <li><strong>2016</strong> Titre de Vendeur Conseil par l'AFPA (Niveau IV)</li>
-            <li><strong>1993</strong> Baccalauréat Gestion Bureautique (Niveau IV)</li>
-          </ul>
-        </div>
-      </section>
-    </div>
-    <div class="row">
-      <section id="contenuExperience">
-        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><h2>Expérience Professionnelle</h2>
-          <ul>
-            <li><strong>2015-2016</strong> Assistante Commerciale/ Agent Commercial à Agence VERNON IMMOBILIER (27)</li>
-            <li><strong>2014</strong> Assistante Gestion à CLOTURES IDF (27)</li>
-            <li><strong>2014</strong> Assitante administrative et comptable à CE Lamotte CLARIANT (60)</li>
-            <li><strong>2008 -2010</strong> Assistante technico-commerciale à AUDITION BENOIT (60)</li>
-            <li><strong>2007</strong> Hôtesse commerciale à HYGENA CUISINES (78)</li>
-            <li><strong>2006</strong> Standardiste - Assistante administrative à SUPEX (27)</li>
-            <li><strong>1996-2005</strong> Secrétaire polyvalente à CYCLO-NEWS (27)</li>
-            <li><strong>1994-1996</strong> Assistante administration des ventes à AGFA-GEVAERT (92)</li>
-            <li><strong>1993</strong> Secrétaire commerciale à AGENCE DE L'EMPEREUR (92)</li>
-          </ul>
-        </div>
-      </section>
-    </div>
-    <div class="row">
-      <section id="centresInterets">
-        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><h2>Centres d'Intérêts</h2>
-          <ul>
-            <li>Peintures à l'huile <i class="fa fa-paint-brush fa-2x picto" aria-hidden="true"></i>
-            </li>
-            <li>Informatique <i class="fa fa-laptop fa-2x picto" aria-hidden="true"></i>
-            </li>
-            <li>Bricolage <img src="img/bricol.png" alt=""></li>
-          </ul>
-        </section>
-      </div>
-    </div>
-  </div>
-</body>
-</html>
+                <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                <i class="fa fa-circle" aria-hidden="true"></i>
+                <i class="fa fa-circle" aria-hidden="true"></i>
+                <i class="fa fa-circle" aria-hidden="true"></i></li>
+                <li>Git - Github <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                  <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                  <i class="fa fa-circle" aria-hidden="true"></i>
+                  <i class="fa fa-circle" aria-hidden="true"></i>
+                  <i class="fa fa-circle" aria-hidden="true"></i></li>
+                </li>
+                <li>HTML - CSS <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                  <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                  <i class="fa fa-circle" aria-hidden="true"></i>
+                  <i class="fa fa-circle" aria-hidden="true"></i>
+                  <i class="fa fa-circle" aria-hidden="true"></i></li>
+                  <li>PHP <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                    <i class="fa fa-circle" aria-hidden="true"></i>
+                    <i class="fa fa-circle" aria-hidden="true"></i>
+                    <i class="fa fa-circle" aria-hidden="true"></i>
+                    <i class="fa fa-circle" aria-hidden="true"></i></li>
+                    <li>Atom <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                      <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                      <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                      <i class="fa fa-circle" aria-hidden="true"></i>
+                      <i class="fa fa-circle" aria-hidden="true"></i></li>
+                      <li>Gimp <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                        <i class="fa fa-circle" aria-hidden="true"></i>
+                        <i class="fa fa-circle" aria-hidden="true"></i>
+                        <i class="fa fa-circle" aria-hidden="true"></i>
+                        <i class="fa fa-circle" aria-hidden="true"></i></li>
+                        <li>Outlook - lotus <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                          <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                          <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                          <i class="fa fa-circle" aria-hidden="true"></i>
+                          <i class="fa fa-circle" aria-hidden="true"></i></li>
+                          <li>Microsoft Office - Ciel - Sage - Cegid
+                            <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                            <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                            <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                            <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                            <i class="fa fa-circle" aria-hidden="true"></i></li>
+                            <li>Logiciels pour appareils auditifs (Connexx, Phonak Target, Inspire...)
+                              <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                              <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                              <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                              <i class="fa fa-circle" aria-hidden="true"></i>
+                              <i class="fa fa-circle" aria-hidden="true"></i></li>
+                            </ul>
+                          </div>
+                          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12"><h2>Compétences transversales</h2>
+                            <ul class="list-unstyled">
+                              <li>Sens de l'organisation</li>
+                              <li>Sens des priorités</li>
+                              <li>Proposition commerciale/Devis</li>
+                              <li>Sens du service client</li>
+                              <li>Grande adaptabilité</li>
+                              <li>Anglais intermédiaire</li>
+                            </ul>
+                          </div>
+                        </section>
+                      </div>
+                      <div class="row">
+                        <section id="contenuSavoirEtre">
+                          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><h2>Savoir-Etre</h2>
+                            <ul class="list-unstyled">
+                              <li>Autonome</li>
+                              <li>Esprit d'équipe</li>
+                              <li>Dynamique</li>
+                              <li>Rigueur et conscience professionnelle</li>
+                              <li>Veille informatique</li>
+                            </ul>
+                          </div>
+                        </section>
+                      </div>
+                      <div class="row">
+                        <section id="contenuFormation">
+                          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><h2>Formation</h2>
+                            <ul>
+                              <li><strong>2017</strong> Formation aux métiers du numérique et du développement Web, à l'école <a href="http://formation.novei.fr/">E2N</a>, (labellisée Grande Ecole du Numérique par l'Etat) en cours</li>
+                              <li><strong>2016</strong> Titre de Vendeur Conseil par l'AFPA (Niveau IV)</li>
+                              <li><strong>1993</strong> Baccalauréat Gestion Bureautique (Niveau IV)</li>
+                            </ul>
+                          </div>
+                        </section>
+                      </div>
+                      <div class="row">
+                        <section id="contenuExperience">
+                          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><h2>Expérience Professionnelle</h2>
+                            <ul>
+                              <li><strong>2015-2016</strong> Assistante Commerciale/ Agent Commercial à Agence VERNON IMMOBILIER (27)</li>
+                              <li><strong>2014</strong> Assistante Gestion à CLOTURES IDF (27)</li>
+                              <li><strong>2014</strong> Assitante administrative et comptable à CE Lamotte CLARIANT (60)</li>
+                              <li><strong>2008 -2010</strong> Assistante technico-commerciale à AUDITION BENOIT (60)</li>
+                              <li><strong>2007</strong> Hôtesse commerciale à HYGENA CUISINES (78)</li>
+                              <li><strong>2006</strong> Standardiste - Assistante administrative à SUPEX (27)</li>
+                              <li><strong>1996-2005</strong> Secrétaire polyvalente à CYCLO-NEWS (27)</li>
+                              <li><strong>1994-1996</strong> Assistante administration des ventes à AGFA-GEVAERT (92)</li>
+                              <li><strong>1993</strong> Secrétaire commerciale à AGENCE DE L'EMPEREUR (92)</li>
+                            </ul>
+                          </div>
+                        </section>
+                      </div>
+                      <div class="row">
+                        <section id="centresInterets">
+                          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><h2>Centres d'Intérêts</h2>
+                            <ul class="list-unstyled">
+                              <li>Peintures à l'huile <i class="fa fa-paint-brush fa-2x picto" aria-hidden="true"></i>
+                              </li>
+                              <li>Informatique <i class="fa fa-laptop fa-2x picto" aria-hidden="true"></i>
+                              </li>
+                              <li>Bricolage <img src="img/bricol.png" alt=""></li>
+                            </ul>
+                          </section>
+                        </div>
+                      </div>
+                    </div>
+                  </body>
+                  </html>
