--- a/page2.html
+++ b/page2.html
@@ -2,15 +2,15 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="stylePage2.css">
   <script src="https://use.fontawesome.com/a85a823305.js"></script>
   <title>Mon parcours</title>
 </head>
 <body>
-  <a href="index.html"><div class="bouton">
-    <i class="fa fa-arrow-circle-left fa-2x" aria-hidden="true"></i>
-  </div></a>
-  <div class="parcours"><h1><strong>Mon parcours professionnel</strong></h1><p>Avant de me reconvertir dans le développement Web, j'ai exercé le métier d'assistante administrative et commerciale pendant une vingtaine d'année dans diverses entreprises.</p><p>Cette expérience m'a permise d'acquérir des compétences dans l'utilisation de nombreux logiciels, une grande adaptabilité aux différents postes occupés ainsi que de la rigueur dans les tâches exécutées.</p>
+  <a href="index.html"><button class="btn btn-lg" type="submit"><span class="fa fa-arrow-circle-left"></span></button></a>
+  <div class="parcours"><h1><strong>Mon parcours professionnel</strong></h1><br>
+    <p>Avant de me reconvertir dans le développement Web, j'ai exercé le métier d'assistante administrative et commerciale pendant une vingtaine d'année dans diverses entreprises.</p><p>Cette expérience m'a permise d'acquérir des compétences dans l'utilisation de nombreux logiciels, une grande adaptabilité aux différents postes occupés ainsi que de la rigueur dans les tâches exécutées.</p>
     <p>Le métier de développeur Web m'est venu tout naturellement car je suis une personne curieuse et tournée vers les nouvelles technologies, je cherche à évoluer dans un domaine très technique qui demande rigueur et patience.</p>
   </div>
 </body>
