--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><h3>DEVELOPPEUSE WEB JUNIOR</h3></div>
           </div>
           <div class="row">
-            <div class="col-md-offset-4 col-sm-offset-4 col-xs-offset-3 col-md-4 col-sm-4 col-xs-4 col-lg-4">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
               <a href="page2.html"><img src="img/photomoi.jpg" alt="photoperso" title="Pour plus d'info sur mon parcours, cliquez ici !."></a>
             </div>
             </div>
@@ -67,7 +67,6 @@
                   <i class="fa fa-circle" aria-hidden="true"></i>
                   <i class="fa fa-circle" aria-hidden="true"></i>
                   <i class="fa fa-circle" aria-hidden="true"></i></li>
-                </li>
                 <li>HTML - CSS <i class="fa fa-plus-circle" aria-hidden="true"></i>
                   <i class="fa fa-plus-circle" aria-hidden="true"></i>
                   <i class="fa fa-circle" aria-hidden="true"></i>
@@ -173,6 +172,6 @@
                           </section>
                         </div>
                       </div>
-                    </div>
+                  </div>
                   </body>
                   </html>
