--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
           <li>Grande adaptabilité</li>
           <li>Anglais intermédiaire</li>
       </ul>
+        <a href="#"><button class="btn btn-lg" type="submit"><span class="fa fa-arrow-circle-up"></span></button></a>
     </div>
   </section>
  </div>
@@ -129,6 +130,7 @@
         <li>Rigueur et conscience professionnelle</li>
         <li>Veille informatique</li>
       </ul>
+        <a href="#"><button class="btn btn-lg" type="submit"><span class="fa fa-arrow-circle-up"></span></button></a>
     </div>
   </section>
  </div>
@@ -140,6 +142,7 @@
         <li><strong>2016</strong> Titre de Vendeur Conseil par l'AFPA (Niveau IV)</li>
         <li><strong>1993</strong> Baccalauréat Gestion Bureautique (Niveau IV)</li>
       </ul>
+        <a href="#"><button class="btn btn-lg" type="submit"><span class="fa fa-arrow-circle-up"></span></button></a>
     </div>
   </section>
   </div>
@@ -157,6 +160,7 @@
           <li><strong>1994-1996</strong> Assistante administration des ventes à AGFA-GEVAERT (92)</li>
           <li><strong>1993</strong> Secrétaire commerciale à AGENCE DE L'EMPEREUR (92)</li>
         </ul>
+         <a href="#"><button class="btn btn-lg" type="submit"><span class="fa fa-arrow-circle-up"></span></button></a>
       </div>
     </section>
   </div>
@@ -168,9 +172,10 @@
        <li>Informatique <i class="fa fa-laptop fa-2x picto" aria-hidden="true"></i></li>
        <li>Bricolage <img src="img/bricol.png" alt=""></li>
       </ul>
+        <a href="#"><button class="btn btn-lg" type="submit"><span class="fa fa-arrow-circle-up"></span></button></a>
      </div>
     </section>
-    </div>
   </div>
+ </div>
 </body>
 </html>
