--- a/page2.html
+++ b/page2.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width= device-width,initial-scale=1">
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="stylePage2.css">
   <script src="https://use.fontawesome.com/a85a823305.js"></script>
