--- a/index.html
+++ b/index.html
@@ -1,182 +1,63 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width= device-width,initial-scale=1">
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-  <link href="style.css" rel="stylesheet">
-  <script src="https://use.fontawesome.com/a85a823305.js"></script>
-  <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-  ga('create', 'UA-91921684-1', 'auto');
-  ga('send', 'pageview');
-  </script>
-  <title>CV</title>
-</head>
-<body>
- <div class="container">
-  <header class="row">
-   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 "><h1>Véronique BOULNOIS</h1></div>
-   </div>
-   <div class="row">
-    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><h3>DEVELOPPEUSE WEB JUNIOR</h3></div>
-    </div>
-   </div>
-   <div class="row">
-    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-      <a href="page2.html"><img src="img/photomoi.jpg" alt="photoperso" title="Pour plus d'info sur mon parcours, cliquez ici !."></a>
-    </div>
-   </div>
-   <div class="row">
-    <div class="visible-xs-block col-xs-12">
-      <a href="page2.html" class="logoreseau">Mon parcours</a>
-    </div>
-  </div>
-   <div class="row">
-    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12"><p><strong>Adresse : </strong></p>60350 TROSLY BREUIL<p>(1h de Paris)</p></div>
-    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12"><p><strong>Téléphone : </strong></p><p>07.83.27.97.13</p>
-     <a  href="https://www.linkedin.com/in/v%C3%A9ronique-boulnois-59026185/" title="mon linkedin"><i class="fa fa-linkedin fa-2x logoreseau" aria-hidden="true"></i></a>
-     <a  href="https://github.com/veroboulnois" title="mon github"><i class="fa fa-github fa-2x logoreseau" aria-hidden="true"></i></a>
-  </div>
-    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12"><p><strong>E-mail : </strong></p><a href="mailto:vero.boulnois@gmail.com" title="mon email"><i class="fa fa-envelope fa-2x logoreseau" aria-hidden="true"></i></a></div>
-  </div>
-</header>
-   <div class="row">
-    <nav class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hidden-xs">
-     <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12"><a href="#contenuCompetences"><h4><strong>Compétences et Savoir-Etre</strong></h4></a></div>
-     <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12"><a href="#contenuFormation"><h4><strong>Formation</strong></h4></a></div>
-     <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12"><a href="#contenuExperience"><h4><strong>Expériences Professionnelles</strong></h4></a></div>
-     <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12"><a href="#centresInterets"><h4><strong>Centre d'intérêts</strong></h4></a></div>
-   </nav>
-  </div>
-   <div class="row couleur">
-    <section id="contenuCompetences">
-     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12"><h2>Compétences informatiques</h2>
-      <ul class="list-unstyled">
-        <li>Windows - Linux - Apache - Terminal - Nano - Vhost
-          <i class="fa fa-plus-circle" aria-hidden="true"></i>
-          <i class="fa fa-plus-circle" aria-hidden="true"></i>
-          <i class="fa fa-circle" aria-hidden="true"></i>
-          <i class="fa fa-circle" aria-hidden="true"></i>
-          <i class="fa fa-circle" aria-hidden="true"></i></li>
-        <li>Git - Github <i class="fa fa-plus-circle" aria-hidden="true"></i>
-          <i class="fa fa-plus-circle" aria-hidden="true"></i>
-          <i class="fa fa-circle" aria-hidden="true"></i>
-          <i class="fa fa-circle" aria-hidden="true"></i>
-          <i class="fa fa-circle" aria-hidden="true"></i></li>
-        <li>HTML - CSS <i class="fa fa-plus-circle" aria-hidden="true"></i>
-          <i class="fa fa-plus-circle" aria-hidden="true"></i>
-          <i class="fa fa-circle" aria-hidden="true"></i>
-          <i class="fa fa-circle" aria-hidden="true"></i>
-          <i class="fa fa-circle" aria-hidden="true"></i></li>
-        <li>PHP <i class="fa fa-plus-circle" aria-hidden="true"></i>
-          <i class="fa fa-circle" aria-hidden="true"></i>
-          <i class="fa fa-circle" aria-hidden="true"></i>
-          <i class="fa fa-circle" aria-hidden="true"></i>
-          <i class="fa fa-circle" aria-hidden="true"></i></li>
-        <li>Atom <i class="fa fa-plus-circle" aria-hidden="true"></i>
-          <i class="fa fa-plus-circle" aria-hidden="true"></i>
-          <i class="fa fa-plus-circle" aria-hidden="true"></i>
-          <i class="fa fa-circle" aria-hidden="true"></i>
-          <i class="fa fa-circle" aria-hidden="true"></i></li>
-        <li>Gimp <i class="fa fa-plus-circle" aria-hidden="true"></i>
-          <i class="fa fa-circle" aria-hidden="true"></i>
-          <i class="fa fa-circle" aria-hidden="true"></i>
-          <i class="fa fa-circle" aria-hidden="true"></i>
-          <i class="fa fa-circle" aria-hidden="true"></i></li>
-        <li>Outlook - lotus <i class="fa fa-plus-circle" aria-hidden="true"></i>
-          <i class="fa fa-plus-circle" aria-hidden="true"></i>
-          <i class="fa fa-plus-circle" aria-hidden="true"></i>
-          <i class="fa fa-circle" aria-hidden="true"></i>
-          <i class="fa fa-circle" aria-hidden="true"></i></li>
-        <li>Microsoft Office - Ciel - Sage - Cegid
-          <i class="fa fa-plus-circle" aria-hidden="true"></i>
-          <i class="fa fa-plus-circle" aria-hidden="true"></i>
-          <i class="fa fa-plus-circle" aria-hidden="true"></i>
-          <i class="fa fa-plus-circle" aria-hidden="true"></i>
-          <i class="fa fa-circle" aria-hidden="true"></i></li>
-        <li>Logiciels pour appareils auditifs (Connexx, Phonak Target, Inspire...)
-          <i class="fa fa-plus-circle" aria-hidden="true"></i>
-          <i class="fa fa-plus-circle" aria-hidden="true"></i>
-          <i class="fa fa-plus-circle" aria-hidden="true"></i>
-          <i class="fa fa-circle" aria-hidden="true"></i>
-          <i class="fa fa-circle" aria-hidden="true"></i></li>
-      </ul>
-    </div>
-     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12"><h2>Compétences transversales</h2>
-       <ul class="list-unstyled">
-          <li>Sens de l'organisation</li>
-          <li>Sens des priorités</li>
-          <li>Proposition commerciale/Devis</li>
-          <li>Sens du service client</li>
-          <li>Grande adaptabilité</li>
-          <li>Anglais intermédiaire</li>
-      </ul>
-        <a href="#"><button class="btn btn-lg" type="submit"><span class="fa fa-arrow-circle-up"></span></button></a>
-    </div>
-  </section>
- </div>
- <div class="row">
-  <section id="contenuSavoirEtre">
-    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><h2>Savoir-Etre</h2>
-      <ul class="list-unstyled">
-        <li>Autonome</li>
-        <li>Esprit d'équipe</li>
-        <li>Dynamique</li>
-        <li>Rigueur et conscience professionnelle</li>
-        <li>Veille informatique</li>
-      </ul>
-        <a href="#"><button class="btn btn-lg" type="submit"><span class="fa fa-arrow-circle-up"></span></button></a>
-    </div>
-  </section>
- </div>
- <div class="row">
-  <section id="contenuFormation">
-    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><h2>Formation</h2>
-      <ul>
-        <li><strong>2017</strong> Formation aux métiers du numérique et du développement Web, à l'école <a href="http://formation.novei.fr/">E2N</a>, (labellisée Grande Ecole du Numérique par l'Etat) en cours</li>
-        <li><strong>2016</strong> Titre de Vendeur Conseil par l'AFPA (Niveau IV)</li>
-        <li><strong>1993</strong> Baccalauréat Gestion Bureautique (Niveau IV)</li>
-      </ul>
-        <a href="#"><button class="btn btn-lg" type="submit"><span class="fa fa-arrow-circle-up"></span></button></a>
-    </div>
-  </section>
-  </div>
-  <div class="row">
-    <section id="contenuExperience">
-      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><h2>Expérience Professionnelle</h2>
-        <ul>
-          <li><strong>2015-2016</strong> Assistante Commerciale/ Agent Commercial à Agence VERNON IMMOBILIER (27)</li>
-          <li><strong>2014</strong> Assistante Gestion à CLOTURES IDF (27)</li>
-          <li><strong>2014</strong> Assitante administrative et comptable à CE Lamotte CLARIANT (60)</li>
-          <li><strong>2008 -2010</strong> Assistante technico-commerciale à AUDITION BENOIT (60)</li>
-          <li><strong>2007</strong> Hôtesse commerciale à HYGENA CUISINES (78)</li>
-          <li><strong>2006</strong> Standardiste - Assistante administrative à SUPEX (27)</li>
-          <li><strong>1996-2005</strong> Secrétaire polyvalente à CYCLO-NEWS (27)</li>
-          <li><strong>1994-1996</strong> Assistante administration des ventes à AGFA-GEVAERT (92)</li>
-          <li><strong>1993</strong> Secrétaire commerciale à AGENCE DE L'EMPEREUR (92)</li>
-        </ul>
-         <a href="#"><button class="btn btn-lg" type="submit"><span class="fa fa-arrow-circle-up"></span></button></a>
-      </div>
-    </section>
-  </div>
-  <div class="row">
-    <section id="centresInterets">
-     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><h2>Centres d'Intérêts</h2>
-      <ul class="list-unstyled">
-       <li>Peintures à l'huile <i class="fa fa-paint-brush fa-2x picto" aria-hidden="true"></i></li>
-       <li>Informatique <i class="fa fa-laptop fa-2x picto" aria-hidden="true"></i></li>
-       <li>Bricolage <img src="img/bricol.png" alt=""></li>
-      </ul>
-        <a href="#"><button class="btn btn-lg" type="submit"><span class="fa fa-arrow-circle-up"></span></button></a>
-     </div>
-    </section>
-  </div>
- </div>
-</body>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width= device-width,initial-scale=1">
+        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+        <link href="css/style.css" rel="stylesheet">
+        <script src="https://use.fontawesome.com/a85a823305.js"></script>
+        <script>
+            (function (i, s, o, g, r, a, m) {
+                i['GoogleAnalyticsObject'] = r;
+                i[r] = i[r] || function () {
+                    (i[r].q = i[r].q || []).push(arguments)
+                }, i[r].l = 1 * new Date();
+                a = s.createElement(o),
+                        m = s.getElementsByTagName(o)[0];
+                a.async = 1;
+                a.src = g;
+                m.parentNode.insertBefore(a, m)
+            })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+            ga('create', 'UA-91921684-1', 'auto');
+            ga('send', 'pageview');
+        </script>
+        <title>CV</title>
+    </head>
+    <body>
+        <div class="container">
+            <header class="row">
+                <div class="col-md-8"><h1>Véronique BOULNOIS</h1><h2>DEVELOPPPEUSE WEB JUNIOR</h2></div>
+                <div class="col-md-4"><img src="img/photomoi.jpg" alt="photoperso" title="ma photo"></div>
+                <div class="row">
+                    <div class="col-md-8">
+                        <p><em>Après avoir exercé le métier d'assistante commerciale pendant une vingtaine d'année dans
+                                diverses entreprises, j’ai souhaité me reconvertir dans le développement Web car je suis une
+                                personne curieuse et tournée vers les nouvelles technologies, j’aime évoluer dans ce
+                                domaine très technique qui demande rigueur et patience.</em></p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                        <div class="navbar navbar-inverse">
+                            <ul class="nav navbar-nav">
+                                <li class="active"><a href="#"><h4><strong>Coordonnées</strong></h4></a></li>
+                                <li class="menu"><a href="index2.html"><h4><strong>Compétences</strong></h4></a></li>
+                                <li class="menu"><a href="index3.html"><h4><strong>Formation</strong></h4></a></li>
+                                <li class="menu"><a href="index4.html"><h4><strong>Expérience professionnelle</strong></h4></a></li>
+                                <li class="menu"><a href="index5.html"><h4><strong>Centres d'intérêt</strong></h4></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </header>
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><strong>Adresse : </strong><p>TROSLY BREUIL (Oise) - Hauts de France<br>50 min Paris Gare du Nord</p>
+                    <p><strong>Téléphone : </strong></p><p>07.83.27.97.13</p>
+                    <p><strong>E-mail : </strong><a href="mailto:vero.boulnois@gmail.com" title="mon email"><i class="fa fa-envelope fa-2x logoreseau" aria-hidden="true"></i></a></p>
+                    <p><strong>Réseaux sociaux : </strong><a  href="https://www.linkedin.com/in/v%C3%A9ronique-boulnois-59026185/" title="mon linkedin"><i class="fa fa-linkedin fa-2x logoreseau" aria-hidden="true"></i></a>
+                        <a  href="https://github.com/veroboulnois" title="mon github"><i class="fa fa-github fa-2x logoreseau" aria-hidden="true"></i></a></p>
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
