--- a/index2.html
+++ b/index2.html
@@ -47,7 +47,7 @@
                         <i class="fa fa-circle" aria-hidden="true"></i>
                         <i class="fa fa-circle" aria-hidden="true"></i>
                     </li>
-                    <li>Javascript <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                    <li>JAVASCRIPT <i class="fa fa-plus-circle" aria-hidden="true"></i>
                         <i class="fa fa-plus-circle" aria-hidden="true"></i>
                         <i class="fa fa-circle" aria-hidden="true"></i>
                         <i class="fa fa-circle" aria-hidden="true"></i>
@@ -79,6 +79,13 @@
                     </li>
                     <li>ANGULAR JS
                         <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                        <i class="fa fa-circle" aria-hidden="true"></i>
+                        <i class="fa fa-circle" aria-hidden="true"></i>
+                        <i class="fa fa-circle" aria-hidden="true"></i>
+                        <i class="fa fa-circle" aria-hidden="true"></i>
+                    </li>
+                    <li>SYMFONY
+                        <i class="fa fa-circle" aria-hidden="true"></i>
                         <i class="fa fa-circle" aria-hidden="true"></i>
                         <i class="fa fa-circle" aria-hidden="true"></i>
                         <i class="fa fa-circle" aria-hidden="true"></i>
