--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
     <body>
         <div class="container">
             <header class="row">
-                <div class="col-md-8"><h1>Véronique BOULNOIS</h1><h2>DEVELOPPPEUSE WEB JUNIOR</h2></div>
-                <div class="col-md-4"><img src="img/photomoi.jpg" alt="photoperso" title="ma photo"></div>
+                <div class="col-lg-8 colcol-md-8 col-sm-12 col-xs-12"><h1>Véronique BOULNOIS</h1><h2>DEVELOPPPEUSE WEB JUNIOR</h2></div>
+                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12"><img src="img/photomoi.jpg" alt="photoperso" title="ma photo"></div>
                 <div class="row">
-                    <div class="col-md-8">
+                    <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
                         <p><em>Après avoir exercé le métier d'assistante commerciale pendant une vingtaine d'année dans
                                 diverses entreprises, j’ai souhaité me reconvertir dans le développement Web car je suis une
                                 personne curieuse et tournée vers les nouvelles technologies, j’aime évoluer dans ce
@@ -54,7 +54,7 @@
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><strong>Adresse : </strong><p>TROSLY BREUIL (Oise) - Hauts-de-France<br>50 min Paris Gare du Nord</p>
                     <p><strong>Téléphone : </strong></p><p>07.83.27.97.13</p>
                     <p><strong>E-mail : </strong><a href="mailto:vero.boulnois@gmail.com" title="mon email"><i class="fa fa-envelope fa-2x logoreseau" aria-hidden="true"></i></a></p>
-                    <p><strong>Réseaux sociaux : </strong><a  href="https://www.linkedin.com/in/v%C3%A9ronique-boulnois-59026185/" title="mon linkedin"><i class="fa fa-linkedin fa-2x logoreseau" aria-hidden="true"></i></a>
+                    <p><strong>Réseaux sociaux : </strong><a  href="https://www.linkedin.com/in/veronique-boulnois/" title="mon linkedin"><i class="fa fa-linkedin fa-2x logoreseau" aria-hidden="true"></i></a>
                         <a  href="https://github.com/veroboulnois" title="mon github"><i class="fa fa-github fa-2x logoreseau" aria-hidden="true"></i></a></p>
                 </div>
             </div>
